[metadata]
name = rias
version = attr: rias.version
description = Rias: Yet Another Machine Learning Framework.
long_description = file: README.rst
long_description_content_type = text/x-rst
url = https://github.com/xames3/rias/
author = XA
author_email = xa@mes3.dev
license = MIT
license_file = LICENSE
platforms = osx, linux
classifiers =
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    License :: OSI Approved :: MIT License
    Operating System :: MacOS :: MacOS X
    Operating System :: POSIX :: Linux
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Software Development :: Libraries
    Topic :: Utilities
    Typing :: Typed
keywords = rias, pytorch, python
project_urls =
    Source = https://github.com/xames3/rias
    Tracker = https://github.com/xames3/rias/issues

[options]
packages = find:
python_requires = >=3.10
zip_safe = False

[tool:pytest]
testpaths = tests
filterwarnings =
    error

[mypy]
mypy_path = rias/
python_version = 3.12
allow_redefinition = True
check_untyped_defs = True
disallow_any_generics = True
disallow_incomplete_defs = True
disallow_subclassing_any = True
disallow_untyped_defs = True
ignore_missing_imports = True
local_partial_types = True
no_implicit_optional = True
no_implicit_reexport = True
show_error_codes = True
strict_equality = True
warn_redundant_casts = True
warn_unreachable = True
warn_unused_configs = True
warn_unused_ignores = True
